...
            verticalArrangement = Arrangement.spacedBy(12.dp)
        ) {
            OutlinedTextField(
                modifier = Modifier
                    .fillMaxWidth()
                    .onFocusChanged { onSearchFocusChanged(it.isFocused) }
                    .semantics { contentDescription = "search_field" },
                value = query,
                onValueChange = {
                    query = it
                    onQueryChanged(it)
                },
                label = { Text(text = searchLabel) },
...
